# rerun-if-change

./: Cargo.toml  build.rs
src/: hello.c  main.rs
