# Cargo.toml

[package]
name = "hello-from-generated-code"
version = "0.1.0"
edition = "2021"
description = "This is a project with testing publish a crate into crates.io site."
license = "MIT"
homepage = "https://github.com/vquyen-study/rerun-if-change"
repository = "https://github.com/vquyen.study/rerun-if-changed"